@@ -1,5 +1,7 @@
 === HEAD
 
+* Make eager_graph respect associations' :order options (use :order_eager_graph=>false to disable) (jeremyevans)
+
 * Cache negative lookup when eagerly loading many_to_one associations where no objects have an associated object (jeremyevans)
 
 * Allow string keys to be used when using Dataset#multi_insert (jeremyevans)
